fix: - changed font family for product details - removed out of stock and changed to sold out beside price - changed landing page image to slider - changed footer color - changed navbar length for my cart and account on smaller screens

--- a/assets/css1/override.css
+++ b/assets/css1/override.css
@@ -43,7 +43,7 @@ body::before {
 .test-font {
     font-family: "Heading Pro Light" !important;
     font-weight: 400;
-    letter-spacing: 1;
+    letter-spacing: 12 !important;
 }
 
 .text-light {
